updated release notes

--- a/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn/ReleaseNotes.txt
+++ b/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn/ReleaseNotes.txt
@@ -1,3 +1,5 @@
+3/07/2015:
+- Added compatibility with previous versions of visual studio
 2/07/2015:
 - Added Icon
 - Basic Functionality is search inside your navigator
