--- a/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn/ReleaseNotes.txt
+++ b/soft.Hati.ErrorListSearchOn/soft.Hati.ErrorListSearchOn/ReleaseNotes.txt
@@ -1,3 +1,6 @@
+18/07/2015:
+- Added Duck Duck Go to search engines
+- Added ability to remove the literals to do general searchs
 3/07/2015:
 - Added compatibility with previous versions of visual studio
 2/07/2015:
